--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 ite.register(Project)
+walrus/walrus/migrations/0007_task_is_complete.py
+walrus/walrus/migrations/0006_remove_task_date_created_remove_task_due_date_and_more.py
+walrus/walrus/migrations/0005_remove_task_project_alter_task_due_date.py
+walrus/walrus/migrations/0004_task_date_created.py
+walrus/walrus/migrations/0003_task_due_date.py
+walrus/walrus/migrations/0002_alter_employee_tasks_alter_task_project_and_more.py
+walrus/walrus/migrations/0001_initial.py
